# PLONK

./: .gitignore  ARCHITECTURE.md  DEMO.HTML  README.md  STRUCTURE_PROPOSAL.md  demo.html  index.html  range_proof_demo.html
backend/: Cargo.toml
backend/src/: circuit.rs  main.rs  prover.rs  srs.rs  types.rs  verifier.rs
backend_new/: Cargo.toml
backend_new/src/: curve.rs  fft.rs  field.rs  kzg.rs  lib.rs  main.rs  polynomial.rs  poseidon_constants.rs  trace.rs  transcript.rs
backend_new/src/api/: handlers.rs  mod.rs  state.rs
backend_new/src/circuit/: constraint.rs  mod.rs  poseidon.rs  range_proof.rs
backend_new/src/plonk/: mod.rs  permutation.rs  preprocess.rs  prover.rs  types.rs  verifier.rs
backend_new/static/: index.html
index/: index.html
web/: demo.js  demo_sections.html  range_proof_trace_0.json  range_proof_trace_100.json  range_proof_trace_127.json  range_proof_trace_255.json  range_proof_trace_300.json  range_proof_trace_42.json
web/data/: circuit_info.json  preprocess_metrics.json  prover_trace.json  setup_metrics.json  summary.txt  verifier_trace.json
